--- a/src/components/sections/Supported_uni.css
+++ b/src/components/sections/Supported_uni.css
@@ -1,30 +1,65 @@
 /* supported universities */
-.universities-section {
-    text-align: center; /* Center content */
+
+  .clients {
     background-color: black;
     color: white;
-  }
-  
-  .universities-logos {
-    display: flex;
     justify-content: center; /* Align logos horizontally */
-    gap: 30px; /* Add space between logos */
-    margin: 20px 0; /* Space above and below the logos */
+  }
+  .row {
+    --bs-gutter-x: 1.5rem;
+    --bs-gutter-y: 1.5rem;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: calc(-1* var(--bs-gutter-y));
+    margin-right: calc(-.5* var(--bs-gutter-x));
+    margin-left: calc(-.5* var(--bs-gutter-x));
+}
+.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+  --bs-gutter-x: 1.5rem;
+  --bs-gutter-y: 0;
+  width: 100%;
+  padding-right: calc(var(--bs-gutter-x)* .5);
+  padding-left: calc(var(--bs-gutter-x)* .5);
+  margin-right: auto;
+  margin-left: auto;
+}
+.client-logos {
+  justify-content: center; /* Align logos horizontally */
+  gap: 30px; /* Add space between logos */
+  margin: 10px 0; /* Space above and below the logos */
+}
+  .clients .client-logo {
+    display: flex;
+    flex: 0 0 auto;
+    width: 16.66666667%;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
   }
   
-  .supported-logo {
+  .clients .client-logo img {
     max-width: 130px; /* Limit the width of the logos */
     max-height: 90px; /* Ensure logos are not too tall */
-    transition: transform 0.3s ease; /* Add hover effect */
+    transition: 0.3s;
+    opacity: 0.5;
+    filter: grayscale(100);
     cursor: pointer;
   }
   
-  .supported-logo:hover {
+  .clients .client-logo img:hover {
     transform: scale(1.1); /* Slight zoom on hover */
+    filter: none;
+    opacity: 1;
   }
   
-  .coming-soon {
-    font-size: 14px;
-    margin-top: 10px; /* Space above 'More Universities Coming Soon' */
+  @media (max-width: 640px) {
+    .client-logos {
+      margin: none; /* Space above and below the logos */
+    }
+    .clients .client-logo img {
+      max-width: 100px; /* Limit the width of the logos */
+      max-height: 70px; /* Ensure logos are not too tall */
+      padding: 20px;
+    }
   }
   
