--- a/src/index.css
+++ b/src/index.css
@@ -28,9 +28,15 @@
   scroll-behavior: smooth;
 }
 
+/* Typography */
+
 /*--------------------------------------------------------------
 # General Styling & Shared Classes
 --------------------------------------------------------------*/
+
+.bg-none {
+  background: none !important;
+}
 
 
 
