--- a/src/components/sections/Hero.css
+++ b/src/components/sections/Hero.css
@@ -20,12 +20,24 @@
     justify-content: center;
     overflow: hidden;
   }
+  .hero::before {
+    content: '';
+    position: absolute;
+    width: 700px;
+    height: 700px;
+    border-radius: 100%;
+    z-index: -1;
+    background-color: rgba(235, 246, 255, 0.089);
+    top: 0;
+    left: 0;
+}
   
   .hero-image {
+    z-index: -2;
     width: 100%;
     height: 100%;
     object-fit: cover; /* Cover entire area */
-    filter: brightness(0.6); /* Slightly darker overlay for better text readability */
+    /*filter: brightness(0.6);  Slightly darker overlay for better text readability */
     transition: transform 0.5s ease-in-out; /* Smooth zoom transition */
   }
   
